--- a/About/Aboutus.html
+++ b/About/Aboutus.html
@@ -36,7 +36,7 @@
             </header>
             <article>
                 <figcaption>
-                    <img alt="Image of about us"src="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/depositphotos_49080337-stock-photo-about-us.webp"></img>
+                    <img alt="Image of about us "src="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/depositphotos_49080337-stock-photo-about-us.webp"></img>
                 </figcaption>
                 <section>
                     <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
@@ -60,7 +60,7 @@
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.</p>
                     <figcaption>
-                        <img src=""></img>
+                        <img src="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/Collaboration-to-Work-in-a-Collaborative-Environment.jpg"></img>
                     </figcaption>
                 </section>
             </article>
