--- a/landing-page.html
+++ b/landing-page.html
@@ -1,11 +1,77 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Landing Page</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
-  </head>
-  <body>
+<!doctype html>
+<html lang="en">
 
-  </body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="styles.css " type="text/css" />
+  <title>Variety Of Life</title>
+</head>
+
+<body>
+  <header>
+    
+  </header>
+  <main>
+    <div class = "container">
+     
+  
+  <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="https://images.pexels.com/photos/325044/pexels-photo-325044.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.pexels.com/photos/3854025/pexels-photo-3854025.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="https://images.pexels.com/photos/60112/pexels-photo-60112.jpeg?auto=compress&cs=tinysrgb&w=600" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+      <div class = "container-fluid">
+        <h1>
+          Our Mission
+        </h1>
+        <p>
+          Mauris ultrices eros in cursus turpis massa tincidunt. Est placerat in egestas erat imperdiet. Quam id leo in vitae. Leo a diam sollicitudin tempor. Consectetur lorem donec massa sapien faucibus et. Cras tincidunt lobortis feugiat vivamus at augue eget. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor aliquam. Adipiscing diam donec adipiscing tristique risus nec feugiat in ferm
+        </p>
+      </div>
+      <div class = "container-fluid">
+        <h1>
+          Make a change
+        </h1>
+        <p>
+          Sit amet consectetur adipiscing elit pellentesque habitant morbi. Leo urna molestie at elementum eu facilisis sed odio morbi. Faucibus nisl tincidunt eget nullam non nisi. Ultrices gravida dictum fusce ut placerat orci. Augue ut lectus arcu bibendum at. Ipsum dolor sit amet consectetur adipiscing elit ut aliquam. Nec ultrices dui sapien eget mi proin sed libero enim. Tellus molestie nunc non blandit. Egestas diam in arcu cursus euismod quis viverra nibh. Ut pharetra sit amet aliquam id diam. Cras fermentum odio eu feugiat pretium nibh ipsum consequat. Bibendum arcu vitae elementum curabitur. Arcu cursus vitae congue mauris rhoncus. Varius quam quisque id diam vel quam. At tempor commodo ullamcorper a lacus.
+        </p>
+      </div>
+
+      <!-- Optional JavaScript -->
+      <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+</main>
+<footer>
+  
+</footer>
+</body>
+
 </html>
