Pushing up the final code for day 2

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -14,7 +14,7 @@
 <body class="d-flex flex-column h-100">
     <main class="flex-shrink-0">
         <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container px-5 h-20">
                 <a class="navbar-brand" href="../Home/Home.html"><img src="../images/logo.png" alt="" /></a>
                 <button class="navbar-toggler active" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -31,20 +31,19 @@
             </div>
         </nav>
         <!-- Header-->
-                        <div class="bg-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
-            height: 100vh;
+        <div class="bg-image" style="background-image: url('https://mdbootstrap.com/img/Photos/Others/images/76.jpg');
             "
             >
-        <header class="bg-primary py-5 d-flex justify-content-end">
+        <header class="bg-primary opacity-100 py-5 d-flex">
             <div class="container px-5">
-                </div>
-                <div class="row gx-5 align-items-center justify-content-between">
-                    <div class="col-lg-8 col-xl-7 col-xxl-6">
-                        <div class="my-5 text-center text-xl-start">
+                
+                <div class="row gx-5 align-items-center justify-content-center">
+                    <div class="col-lg-9 col-xl-7 col-xxl-6">
+                        <div class="my-5 text-center text-xl-center">
                             <h1 class="display-5 fw-bolder text-white mb-2">Mental Awareness Support Systems</h1>
                             <p class="lead fw-normal text-white-50 mb-4">A Tribute to Mental illness victims and those who want to support them</p>
-                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-start">
-                                <a class="btn btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
+                            <div class="d-grid gap-3 d-sm-flex justify-content-sm-center justify-content-xl-between">
+                                <a class="btn btn-outline-light btn-primary btn-lg px-4 me-sm-3" href="#features">Get Started</a>
                                 <a class="btn btn-outline-light btn-lg px-4" href="#info">Learn More</a>
                             </div>
                         </div>
@@ -87,8 +86,8 @@
                             </div>
                             <div class="col h-100">
                                 <div class="feature bg-primary bg-gradient text-white rounded-3 mb-3 text-center"><i class="bi bi-toggles2 text-center"></i></div>
-                                <h2 class="h5 text-center">Featured title</h2>
-                                <p class="mb-0 text-center">Paragraph of text beneath the heading to explain the heading. Here is just a bit more text.</p>
+                                <h2 class="h5 text-center">Title</h2>
+                                <p class="mb-0 text-center">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Morbi tempus iaculis urna id volutpat lacus laoreet.</p>
                             </div>
                         </div>
                     </div>
