--- a/action.html
+++ b/action.html
@@ -7,18 +7,55 @@
 <body>
     <main>
         <header>
-            <img src="">
-            <nav>
-                <a href="home.html">Home</a>
-                <a href="stories.html">Stories</a>
-                <a href="action.html">Call To Action</a>
-            </nav>
+           <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="stories.html">Stories</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="action.html">Call To Action</a>
+                </li>
+              </ul>
+              </div>
+            </div>
+          </nav>
         </header>
-        <section>
-            <img src="photos/gun.jpg">
-            <p></p>
-            <img src="">
-            <p></p>
+        <section class="row">
+            <img src="photos/gun.jpg" class="img-fluid col-5" >
+            <p class="col-7">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illo sunt reprehenderit recusandae nihil, impedit consequatur repellat. Eaque iste veniam quam praesentium sint numquam necessitatibus, possimus id corrupti, est cupiditate atque?</p>
+         </section>
+          <section class="row" >
+                  <p class="col-7">Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                  sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                  magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                  quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                  ut aliquip ex ea commodo consequat. Duis autem vel eum iriure
+                  dolor in hendrerit in vulputate velit esse molestie consequat,
+                  vel illum dolore eu feugiat nulla facilisis at vero eros et
+                  accumsan et iusto odio dignissim qui blandit praesent luptatum
+                  zzril delenit augue duis dolore te feugait nulla facilisi.
+                  Nam liber tempor cum soluta nobis eleifend option congue
+                  nihil imperdiet doming id quod mazim placerat facer possim
+                  assum. Typi non habent claritatem insitam; est usus legentis
+                  in iis qui facit eorum claritatem. Investigationes
+                  demonstraverunt lectores legere me lius quod ii legunt saepius.
+                  Claritas est etiam processus dynamicus, qui sequitur mutationem
+                  consuetudium lectorum. Mirum est notare quam littera gothica,
+                  quam nunc putamus parum claram, anteposuerit litterarum formas
+                  humanitatis per seacula quarta decima et quinta decima. Eodem
+                  modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
+                  in futurum.</p>
+            <img src="photos/gun.jpg" class= "col-5">
+        
         </section>
         <span>
             <form>
@@ -34,5 +71,6 @@
             </nav>
         </footer>
     </main>
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 </html>
