Trying to merge

--- a/About/Aboutus.html
+++ b/About/Aboutus.html
@@ -60,7 +60,7 @@
                     modo typi, qui nunc nobis videntur parum clari, fiant sollemnes
                     in futurum.</p>
                     <figcaption>
-                        <img src="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/Collaboration-to-Work-in-a-Collaborative-Environment.jpg"></img>
+                        <img alt="https://raw.githubusercontent.com/Knox-Phillips/unit-1-project/master/Collaboration-to-Work-in-a-Collaborative-Environment.jpg"></img>
                     </figcaption>
                 </section>
             </article>
