--- a/additional.html
+++ b/additional.html
@@ -1,11 +1,31 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <title>Additional</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" type="text/css" />
-  </head>
-  <body>
+</head>
 
-  </body>
+<body>
+    <nav class="navbar navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right text-center">
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#band">ABOUT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+</body>
+
 </html>
