--- a/landing-page.html
+++ b/landing-page.html
@@ -13,9 +13,24 @@
 </head>
 
 <body>
-  <header>
-    
-  </header>
+<nav class="navbar navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Logo</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right text-center">
+                    <li><a href="#home">HOME</a></li>
+                    <li><a href="#band">ABOUT</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
   <main>
     <div class = "container">
      
