--- a/stories.html
+++ b/stories.html
@@ -5,27 +5,34 @@
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
     <title>Gun violence</title>
     <link rel="stylesheet" href="stories.css" type="text/css" />
+      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
     <main>
-        <nav id="top-bar">
-            <div class="left-side">
-                <img src="pistol-gun.jpg" class="logo"></img>
+        <header>
+           <nav class="navbar navbar-expand-lg bg-light">
+            <div class="container-fluid">
+              <a class="navbar-brand" href="#">Navbar</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="stories.html">Stories</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="action.html">Call To Action</a>
+                </li>
+              </ul>
+              </div>
             </div>
-            <div id="middle">
-                <h1>Gun Violence</h1>
-            </div>
-            <div id="right-side">
-                <a href="">lol</a>
-                <a href="">lmao</a>
-                <a href="">haha</a>
-            </div>
-        </nav>
-        <div class="photo">
-            <img src="Buffalo-image.jpg" class="Buffalo"></img>
-            <figcaption></figcaption>
-        </div>
+          </nav>
+        </header>
         <article>
             <h3>Buffalo Shooting</h3>
             <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
@@ -80,6 +87,7 @@
         </article>
         <footer></footer>
     </main>
+         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 </body>
 
 </html>
