added FAQ.html and team.html

--- a/home.html
+++ b/home.html
@@ -18,7 +18,7 @@
                 <ul>
                 <li>home</li>
                 <li>about us</li>
-                <li>Donation</li>
+                <li>Community</li>
                 <li>FQA</li>
                 <li>Team</li>
                 </ul>
