--- a/about-us.html
+++ b/about-us.html
@@ -18,7 +18,7 @@
                 <ul>
                     <li>home</li>
                     <li>facts</li>
-                    <li>Donation</li>
+                    <li>Community</li>
                     <li>FQA</li>
                     <li>Team</li>
                 </ul>
