--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Home Page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   </head>
   <body>
@@ -20,17 +20,39 @@
                   <a class="nav-link active" aria-current="page" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Stories</a>
+                  <a class="nav-link active" aria-current="page" href="stories.html">Stories</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Contact Us</a>
+                  <a class="nav-link active" aria-current="page" href="action.html">Call To Action</a>
                 </li>
               </ul>
               </div>
             </div>
           </nav>
       </header>
-    <h1>Gun Violence</h1>
+      <main>
+            <section class="opening">
+                <img>
+                <div>
+                    <h3>Stop Gun Violence</h3>
+                    <p></p>
+                    <div><h3>DONATE</h3></div>
+                </div>
+            </section>
+            <section class="gunViolenceInfo">
+                <h1></h1>
+                <p></p>
+                <img>
+            </section>
+            <section>
+                <img>
+                <h1></h1>
+                <p></p>
+            </section>
+            <footer>
+            </footer>
+        </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
