Ateempting to merge

--- a/Home/Home.html
+++ b/Home/Home.html
@@ -94,7 +94,7 @@
                 </div>
             </div>
         </section>
-        <!-- Testimonial section-->
+        <!-- John doe-->
         <div class="py-5 bg-light">
             <div class="container px-5 my-5">
                 <div class="row gx-5 justify-content-center">
@@ -114,7 +114,7 @@
                 </div>
             </div>
         </div>
-        <!-- Informational section-->
+        <!-- Informational part-->
         <section class="py-5" id="info">
             <div class="container px-5 my-5">
                 <div class="row gx-5 justify-content-center">
