--- a/Donations/Donations.html
+++ b/Donations/Donations.html
@@ -1,35 +1,51 @@
 <!DOCTYPE html>
-<html lang="en">
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <title>Mental Illness Tribute</title>
-        <link rel="stylesheet" href="../style.css" type="text/css"/>
-        <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
-        <!-- Bootstrap icons-->
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" rel="stylesheet" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    </head>
-    <body class="d-flex flex-column h-100">
-        <main class="flex-shrink-0">
-            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-                <div class="container px-5">
-                    <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="" /></a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
-                        <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                            <li class="nav-item"><a class="nav-link" href="../Home/Home.html">Home</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../About/Aboutus.html">About</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../Contact/ContactUs.html">Contact</a></li>
-                            <li class="nav-item"><a class="nav-link" href="../Donations/Donations.html">Donations</a></li>
-                            <li class="nav-item dropdown">
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-    </body>
+<html>
+
+<head>
+    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+    <link rel="stylesheet" href="styles.css" type="text/css" />
+    <title>Donations Page</title>
+</head>
+
+<body>
+    <nav>
+        <div>
+            <img id="logo" src="../images/logo.png">
+        </div>
+        <div id="navBar">
+            <a class="nav-link" href="../Home/Home.html">Home</a>
+            <a class="nav-link" href="../About/Aboutus.html">About</a>
+            <a class="nav-link" href="../Contact/ContactUs.html">Contact</a>
+            <a class="nav-link" href="../Donations/Donations.html">Donations</a>
+        </div>
+    </nav>
+    <main id="main-box">
+        <section class="left-side">
+            <h1 class="donationsTitle">Donations</h1>
+            <p class="container">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel semper ipsum. Integer posuere dictum scelerisque. Proin dignissim ligula ac finibus vehicula. Cras ornare blandit nunc. Donec vestibulum elit id diam varius, quis hendrerit neque pretium. Donec ullamcorper, tellus sed elementum tempor, elit velit tempus enim, nec rutrum neque ligula sit amet magna. Vestibulum ac risus at nisl gravida luctus. In porta at neque nec luctus. </p>
+            <div>
+                <input type="checkbox" name="One Time" id="checkBox1" />
+                <label for="checkbox">One Time</label>
+                <input type="checkbox" name="Monthly" id="checkBox2" />
+                <label for="checkbox2">Monthly</label>
+                <button class="button" type="submit">$10</button>
+                <button class="button" type="submit">$20</button>
+                <button class="button" type="submit">$50</button>
+                <button class="button" type="submit">OTHER</button>
+        </section>
+        <section class="right-side">
+            <p>esfsefseghfdhjhvhjkv bgyiv bobf</p>
+        </section>
+    </main>
+    <footer>
+        <a href="">Privacy</a>
+        <a href="">Policy</a>
+        <a href="">Terms</a>
+        <img src=""></img>
+        <figure>
+            <img width="200" height="100" src="https://img.freepik.com/premium-photo/silhouette-two-hands-man-woman-reaching-towards-each-other-sky-sunset-giving-helping-hand_158483-1540.jpg?w=2000"></img>
+        </figure>
+    </footer>
+</body>
+
 </html>
