--- a/community.html
+++ b/community.html
@@ -46,7 +46,7 @@
                 <li>Contact Us</li>
                 <li>Copyright info</li>
                 <li>Jobs</li>
-                <li>Donate</li>
+                <li>Donates</li>
             </ul>
         </section>
     </footer>
