--- a/landingpage.html
+++ b/landingpage.html
@@ -15,9 +15,9 @@
   <main>
     <section class- "navbox">
         <nav class="nav">
-            <div class="title"><h1>HelpHomelessNYC </h1> </div>
+         <h1>HelpHomelessNYC </h1> 
             <div class="links">
-                <a href="#aboutus"> <h4>About Us</h4></a>
+                <a href="#aboutus"> <About Us</h4></a>
                 <a href="#Shelters"> <h4>Shelters</h4></a>
                 <a href="#Pantries"> <h4>Pantries</h4></a>
                 <a href="#Donations"> <h4>Donations</h4></a>
