--- a/community.html
+++ b/community.html
@@ -16,8 +16,8 @@
             </h1>
             <nav id="navbar" class="navbar">
                 <ul>
-                <li>home</li>
-                <li>about us</li>
+                <li>Home</li>
+                <li>About us</li>
                 <li>Donation</li>
                 <li>FQA</li>
                 <li>Team</li>
