dev: pushing up files

--- a/donations.html
+++ b/donations.html
@@ -14,17 +14,31 @@
         <p>Volunteer</p>
     </div>
     <div>
-        <a>Places To Volunteer</a>
-        
+        <ul>
+            <a>Places To Volunteer</a>
+            <br></br>
+            <li> <a href="https://www.coalitionforthehomeless.org/volunteer/">Coalition of The Homeless</a> </li>
+            <br></br>
+            <li> <a href="https://www.hfhnyc.org/get-involved/volunteer">HFH</a> </li>
+            <br></br>
+            <li> <a href="https://www.ncsinc.org/volunteer">Neighborhood Coalition for Shelter</a> </li>
+            <br></br>
+            <li> <a href="https://www.bowery.org/volunteer/">The Bowery Mission</a> </li>
+        </ul>
+    </div>
+    <div>
+
         <p>Make Donations</p>
-        <a href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB">Catholic Charities USA</a>
+        <ul>
+        <li> <a href="https://lp.catholiccharities.us/reducingpoverty?gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ0pUxhuHIUA9fEE9B_KCae5K6Qx6Z_7AsPK2Sb9E-7CbWnr0MCa2EgaAl38EALw_wcB">Catholic Charities USA</a> </li>
         <br></br>
-        <a href="https://www.coalitionforthehomeless.org/donate/">Coalition for the Homeless</a>
+        <li> <a href="https://www.coalitionforthehomeless.org/donate/">Coalition for the Homeless</a> </li>
         <br></br>
-        <a href="https://www1.nyc.gov/site/dhs/about/donations.page">The Department of Homeless Services</a>
+        <li> <a href="https://www1.nyc.gov/site/dhs/about/donations.page">The Department of Homeless Services</a> </li>
         <br></br>
-        <a href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=google&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&utm_content=nil_nil_nil_nil&s_src=2210BWAMB&s_subsrc=SEM&mwm_id=617058305677&mwsc=TBM-116-2210BWAMB&gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ3r9S1cFKQ-z-Xc2DAXnwABRwaUn3eCJnLms8BjoOEXo3YxYYLdDNcaAjuzEALw_wcB">The Bowery Mission</a>
-        
+        <li> <a href="https://www.bowery.org/donate/form/?journitygroup=View+%24+Donor+Form&utm_source=google&utm_medium=cpc&utm_campaign=MW_TBM_116-46647_2210bwamb_20231002_2210BWAMB&utm_content=nil_nil_nil_nil&s_src=2210BWAMB&s_subsrc=SEM&mwm_id=617058305677&mwsc=TBM-116-2210BWAMB&gclid=Cj0KCQjwkt6aBhDKARIsAAyeLJ3r9S1cFKQ-z-Xc2DAXnwABRwaUn3eCJnLms8BjoOEXo3YxYYLdDNcaAjuzEALw_wcB">The Bowery Mission</a> </li>
+        </ul>
+
     </div>
     <footer>
 
