--- a/Contact/ContactUs.html
+++ b/Contact/ContactUs.html
@@ -15,7 +15,7 @@
     <body class="d-flex flex-column">
         <main class="flex-shrink-0">
            <!-- Navigation-->
-            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <navbar class="navbar navbar-expand-lg navbar-dark bg-dark">
                 <div class="container px-5">
                     <a class="navbar-brand" href="index.html"><img src="../images/logo.png" alt="" /></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -30,7 +30,7 @@
                         </ul>
                     </div>
                 </div>
-            </nav>
+            </navbar>
             <!-- Page content-->
             <section class="py-5">
                 <div class="container px-5">
