--- a/Donations/Donations.html
+++ b/Donations/Donations.html
@@ -1,51 +1,76 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-    <link rel="stylesheet" href="styles.css" type="text/css" />
-    <title>Donations Page</title>
-</head>
-
-<body>
-    <nav>
-        <div>
-            <img id="logo" src="../images/logo.png">
+    <head>
+        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta name="viewport">
+        <title>Bootstrap</title>
+         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    </head>
+    <body>
+       <!-- Navigation-->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container px-5 h-20">
+                <a class="navbar-brand" href="../Home/Home.html"><img src="../images/logo.png" alt="" /></a>
+                <button class="navbar-toggler active" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="true" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                    <ul class="navbar-nav ms-auto mb-2 mb-lg-0 ">
+                        <li class="nav-item"><a class="nav-link" href="../Home/Home.html">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../About/Aboutus.html">About</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Contact/ContactUs.html">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../Donations/Donations.html">Donations</a></li>
+                        <li class="nav-item dropdown">
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+     <!--Header--> 
+        <section class= "donations-page">
+          <div class="container-lg">
+                 <div class= "row justify-content-center"></div>
+                     <h1 class="display-2 fw-bold">Donate Now.</h1> 
+                     <h2 class="fs-1 fst-italic fw-bold">Help change the world for millions affected by mental illness.</h2>
+                 </div>
+             </section>
+     </body>
+     <!--Main Section-->
+    <div class="container">
+      <div class="row">
+        <div class="col fw-bold">Sustainable recovery from mental illness and social isolation takes a community. Your donation supports individuals with mental illness at every stage of life, ranging from early intervention programming for college-aged students experiencing a mental health crisis, to a dignified and thriving community for seniors. It also supports advocacy efforts and policies that change lives.</div>
+        <div class="col fw-bold">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce hendrerit gravida aliquam. Vestibulum tristique feugiat sagittis. Cras semper ipsum nec lorem pretium maximus. Aliquam viverra lacinia neque consectetur fermentum. Curabitur pharetra, nibh et tempus consequat, massa nunc laoreet ipsum, at semper orci elit vitae metus. Aenean a commodo est. Etiam sit amet egestas eros </div>
+        <h3 class="fw-bold"> Donation Type</h3>
+      </div>
+          <section class="btn-group" role="group" aria-label="Basic example">
+               <button type="button" class="btn btn-primary">Donate Once</button>
+               <button type="button" class="btn btn-primary">Give Monthly</button>
+           </section> 
+          <div>
+        <h3 class= "fw-bold">Amount</h3>
+          <button type="button" class="btn btn-primary">$10</button>
+          <button type="button" class="btn btn-primary">$20</button>
+          <button type="button" class="btn btn-primary">$50</button>
+          <button type="button" class="btn btn-primary">$100</button>
+          </div>
+          <div>
+              <h3 class="fw-bold">OTHER</h3>
+              <input type="other" class="form-control-sm" placeholder="$">
+          </div>
+      
+                  <!--footer-->
+      <footer class="bg-dark py-4 mt-auto">
+         <div class="container px-5">
+            <div class="row align-items-center justify-content-between flex-column flex-sm-row">
+                <div class="col-auto">
+                    <div class="small m-0 text-white">Copyright &copy; MentalFriend 2022</div>
+                </div>
+                <div class="col-auto">
+                    <a class="link-light small" href="#!">Privacy</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Terms</a>
+                    <span class="text-white mx-1">&middot;</span>
+                    <a class="link-light small" href="#!">Contact</a>
+                </div>
+            </div>
         </div>
-        <div id="navBar">
-            <a class="nav-link" href="../Home/Home.html">Home</a>
-            <a class="nav-link" href="../About/Aboutus.html">About</a>
-            <a class="nav-link" href="../Contact/ContactUs.html">Contact</a>
-            <a class="nav-link" href="../Donations/Donations.html">Donations</a>
-        </div>
-    </nav>
-    <main id="main-box">
-        <section class="left-side">
-            <h1 class="donationsTitle">Donations</h1>
-            <p class="container">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis vel semper ipsum. Integer posuere dictum scelerisque. Proin dignissim ligula ac finibus vehicula. Cras ornare blandit nunc. Donec vestibulum elit id diam varius, quis hendrerit neque pretium. Donec ullamcorper, tellus sed elementum tempor, elit velit tempus enim, nec rutrum neque ligula sit amet magna. Vestibulum ac risus at nisl gravida luctus. In porta at neque nec luctus. </p>
-            <div>
-                <input type="checkbox" name="One Time" id="checkBox1" />
-                <label for="checkbox">One Time</label>
-                <input type="checkbox" name="Monthly" id="checkBox2" />
-                <label for="checkbox2">Monthly</label>
-                <button class="button" type="submit">$10</button>
-                <button class="button" type="submit">$20</button>
-                <button class="button" type="submit">$50</button>
-                <button class="button" type="submit">OTHER</button>
-        </section>
-        <section class="right-side">
-            <p>esfsefseghfdhjhvhjkv bgyiv bobf</p>
-        </section>
-    </main>
-    <footer>
-        <a href="">Privacy</a>
-        <a href="">Policy</a>
-        <a href="">Terms</a>
-        <img src=""></img>
-        <figure>
-            <img width="200" height="100" src="https://img.freepik.com/premium-photo/silhouette-two-hands-man-woman-reaching-towards-each-other-sky-sunset-giving-helping-hand_158483-1540.jpg?w=2000"></img>
-        </figure>
     </footer>
-</body>
-
-</html>
+  
