--- a/home.html
+++ b/home.html
@@ -1,58 +1,68 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Home Page</title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge; charset=utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gun Violence</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link href="style.css rel="stylesheet">
   </head>
+  
   <body>
-      <header>
-          <nav class="navbar navbar-expand-lg bg-light">
-            <div class="container-fluid">
-              <a class="navbar-brand" href="#">Navbar</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="stories.html">Stories</a>
-                </li>
-                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="action.html">Call To Action</a>
-                </li>
-              </ul>
-              </div>
-            </div>
-          </nav>
-      </header>
-      <main>
-            <section class="opening">
-                <img>
-                <div>
-                    <h3>Stop Gun Violence</h3>
-                    <p></p>
-                    <div><h3>DONATE</h3></div>
-                </div>
-            </section>
-            <section class="gunViolenceInfo">
-                <h1></h1>
-                <p></p>
-                <img>
-            </section>
-            <section>
-                <img>
-                <h1></h1>
-                <p></p>
-            </section>
-            <footer>
-            </footer>
-        </main>
+    <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3 fixed-top">
+      <div class="container">
+        <a href="#" class="navbar-brand"> <img src=Logo_2.svg width="375" height"90"/></a>
 
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navmenu"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navmenu">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a href="#home" class="nav-link">HOME</a>
+            </li>
+            <li class="nav-item">
+              <a href="#stories" class="nav-link">STORIES</a>
+            </li>
+            <li class="nav-item">
+              <a href="#action" class="nav-link">CALL TO ACTION</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
+    
+    <section class="bg-danger text-light p-5 p-lg-0 pt-lg-5 text-center text-sm-start">
+      <div class="container">
+        <div class="d-sm-flex align-items-center justify-content-between">
+          <div>
+            <h1>Stop Gun Violence</h1>
+            <p class="lead my-4">
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat 
+            </p>
+            <button
+              class="btn btn-light btn-lg"
+              data-bs-toggle="modal"
+              data-bs-target="#donate"
+            >
+              DONATE
+            </button>
+          </div>
+          <img
+            class="img-fluid w-50 d-none d-sm-block"
+            src="Terrorists.svg"
+            alt=""
+          />
+        </div>
+      </div>
+    </section>
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
   </body>
 </html>
