updated additional css and html

--- a/additional.html
+++ b/additional.html
@@ -4,7 +4,8 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="style.css" type="text/css" />
+  <link rel="stylesheet" href="additional.css" type="text/css" />
+  <link rel="stylesheet" href="gallery.css" type="text/css" />
   <!--Bootstrap Library-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
   <!--jquery Library-->
@@ -32,7 +33,7 @@
       </div>
     </div>
   </nav>
-  <div>
+  <div class = "side-bar">
     <h1> ARTICLE</h1>
     <div class="articles">
       <a href="#">Article 1</a>
@@ -40,11 +41,11 @@
       <a href="#">Article 3</a>
     </div>
   </div>
-  <main>
+  <section>
     <div class="container">
       <div class="row">
         <div class="col">
-          Article 1
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
         </div>
       </div>
       <img src="..." class="img-thumbnail" alt="...">
@@ -53,7 +54,7 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          Article 2
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
         </div>
       </div>
       <img src="..." class="img-thumbnail" alt="...">
@@ -62,12 +63,12 @@
     <div class="container">
       <div class="row">
         <div class="col">
-          Article 3
+          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eget gravida cum sociis natoque penatibus. Praesent tristique magna sit amet. Fermentum posuere urna nec tincidunt praesent semper feugiat nibh sed. In aliquam sem fringilla ut. Aenean euismod elementum nisi quis eleifend. Sit amet dictum sit amet justo. Odio facilisis mauris sit amet. Scelerisque fermentum dui faucibus in ornare quam viverra.
         </div>
       </div>
       <img src="..." class="img-thumbnail" alt="...">
     </div>
-  </main>
+  </section>
   <footer>
     ODKFOKKFLGM
   </footer>
