--- a/gallery.html
+++ b/gallery.html
@@ -23,9 +23,9 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <!--<li class="nav-item">-->
-          <!--  <a class="nav-link" href="landing-page.html">Home</a>-->
-          <!--</li>-->
+          <li class="nav-item">
+            <a class="nav-link" href="landing-page.html">Home</a>
+          </li>
           <li class="nav-item">
             <a class="nav-link" href="additional.html">Link</a>
           </li>
