added images and colors in CSS

--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -7,12 +7,128 @@
         <title>Comprehensive Sex Ed</title>
     </head>
     <body>
-        <!--<header></header>-->
-        <main>
+        <header>
+            <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #006BA6;">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Comprehensive Sex Education</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+                        <ul class="navbar-nav mb-2 mb-lg-0">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">Why Sex Ed?</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" aria-current="page" href="#">Safe Sex Methods</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+    </header>
+        <main class="container">
             <h2>Contraceptives and Barrier Methods</h2>
-            <section>
-                <figure></figure>
-                <p></p>
+            <section class="container text-center">
+              <div class="row" id="row1">
+                <section class="col-lg" id="col1">
+                    <figure>
+                        <img src="./Buddha-hand-pana.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+                <section class="col-lg" id="col2">
+                    <figure>
+                        <img src="./Marriage-pana.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+                <section class="col-lg" id="col3">
+                    <figure>
+                        <img src="./Female reproductive system-amico.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+              </section>
+                <section class="container text-center">
+                  <div class="row" id="row2">
+                    <section class="col-lg" id="col4">
+                        <figure>
+                            <img src="./Lesbian couple-amico.png" class="col-6"></img>
+                        </figure>
+                        <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat.</article>
+                    </section>
+                    <section class="col-lg" id="col5">
+                        <figure>
+                            <img src="./Female reproductive system-cuate.png" class="col-6"></img>
+                        </figure>
+                        <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat.</article>
+                    </section>
+                    <section class="col-lg" id="col6">
+                        <figure>
+                            <img src="./Buddha hand-amico.png" class="col-6"></img>
+                        </figure>
+                        <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                    sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                    magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                    quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                    ut aliquip ex ea commodo consequat.</article>
+                    </section>
+                  </div>
+                </section>
+                <section class="container text-center">
+              <div class="row" id="row3">
+                <section class="col-lg" id="col7">
+                    <figure>
+                        <img src="./Lesbian couple-rafiki.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+                <section class="col-lg" id="col8">
+                    <figure>
+                        <img src="./Baby birth-pana.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+                <section class="col-lg" id="col9">
+                    <figure>
+                        <img src="./Buddha hand-cuate.png" class="col-6"></img>
+                    </figure>
+                    <article>Lorem ipsum dolor sit amet, consectetuer adipiscing elit,
+                sed diam nonummy nibh euismod tincidunt ut laoreet dolore
+                magna aliquam erat volutpat. Ut wisi enim ad minim veniam,
+                quis nostrud exerci tation ullamcorper suscipit lobortis nisl
+                ut aliquip ex ea commodo consequat.</article>
+                </section>
+              </section>
             </section>
         </main>
         <!--<footer></footer>-->
