fixed page links

--- a/action.html
+++ b/action.html
@@ -24,13 +24,13 @@
         <div class="collapse navbar-collapse" id="navmenu">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
-              <a href="#home" class="nav-link">HOME</a>
+              <a href="home.html" class="nav-link">HOME</a>
             </li>
             <li class="nav-item">
-              <a href="#stories" class="nav-link">STORIES</a>
+              <a href="stories.html" class="nav-link">STORIES</a>
             </li>
             <li class="nav-item">
-              <a href="#action" class="nav-link">CALL TO ACTION</a>
+              <a href="#" class="nav-link">CALL TO ACTION</a>
             </li>
           </ul>
         </div>
