--- a/learn-more/learn-more.html
+++ b/learn-more/learn-more.html
@@ -10,7 +10,7 @@
         <header>
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #006BA6;">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Comprehensive Sex Education</a>
+                    <a class="navbar-brand" href="./landing-page/index.html">Comprehensive Sex Education</a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
