--- a/statistics/statistics.html
+++ b/statistics/statistics.html
@@ -62,7 +62,7 @@
                     </div>
                     <div class="col order-1">
                         <h3>Sex-Ed Misinformation </h3>
-                        <p></p>
+                        <p> -breifly mention methods on staying safe</p>
                     </div>
                     </div>
                 </section>
